--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,13 @@
 
         
         <div class="split-credit">
-    <p>&copy;2024 MONDAY Flowers</p>
+  <p>&copy;2024 MONDAY Flowers - <a href="https://onepagelove.com/split" title="Split Template">Split Template</a> by <a href="https://onepagelove.com" title="One Page Love">One Page Love</a></p>
+
+  <!--
+  To edit this credit you can remove the CC3.0 license for only $5 here: https://onepagelove.com/split
+  this really helps contribute towards us developing more templates and means the world to me!
+  Cheers, Rob (@robhope)
+  -->
 </div>
 
       </div>
